--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,8 @@
 body {
     background-color: #1F2937;
-    overflow-x: hidden; /* Prevent horizontal scrolling */
-    margin: 0; /* Reset default margin */
-    padding: 0; /* Reset default padding */
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
@@ -11,24 +11,21 @@ body {
     padding: 0px;
 }
 
-/* Reset default margin and padding for lists */
 ul, li {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-/* Header styles */
 header {
-    background-color: #1F2937; /* Set your desired background color */
-    color: #fff; /* Text color for logo and links */
-    display: flex; /* Align children horizontally */
-    justify-content: space-between; /* Space out logo and nav links */
-    align-items: center; /* Vertically center items */
-    padding: 10px; /* Add some padding */
+    background-color: #1F2937;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
 }
 
-/* Logo styles */
 .logo {
     font-family: 'Roboto', sans-serif;
     color: #f9faf8;
@@ -37,13 +34,12 @@ header {
     margin-right: 10px;
 }
 
-/* Navigation styles */
 nav ul {
-    display: flex; /* Align links horizontally */
+    display: flex; 
 }
 
 nav li {
-    margin-right: 20px; /* Add spacing between links */
+    margin-right: 20px; 
 }
 
 nav a {
@@ -52,19 +48,17 @@ nav a {
     color: #fff;
 }
 
-/* Hero section styles */
 .hero {
-    display: flex; /* Arrange columns side by side */
-    padding: 20px 0px 0px 0px; /* Add some padding around the hero section */
-    background-color: #1F2937; /* Set your desired background color */
+    display: flex; 
+    padding: 20px 0px 0px 0px; 
+    background-color: #1F2937; 
     margin-top: 40px;
     margin-bottom: 60px;
 }
 
-/* Content column styles */
 .content-column {
-    flex: 1; /* Take up available space */
-    padding-right: 30px; /* Add spacing between columns */
+    flex: 1;
+    padding-right: 30px;
     margin-left: 10px;
 }
 
@@ -94,22 +88,19 @@ button {
     margin-top: 20px;
 }
 
-/* Image column styles */
 .image-column {
-    flex: 1; /* Take up available space */
+    flex: 1; 
 }
 
 .image-column img {
-    max-width: 100%; /* Ensure image fits within column */
+    max-width: 100%; 
     height: auto;
 }
 
-/*Information section styles */
 .information-section {
     background-color: #fff;
     width: 100%;
     padding: 50px 0;
-    margin-bottom: 50px;
 }
 
 .information-heading {
@@ -138,11 +129,100 @@ button {
     width: 100%;
     height: auto;
     margin-bottom: 10px;
+    border-radius: 10px;
 }
 
 .image-item p {
     font-size: 1em;
     color: #1F2937;
     font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+}
+
+.quote {
+    background-color: #e5e7eb;
+    width: 100%;
+    padding: 80px 0;
+}
+
+.quote-text {
+    font-family: 'Roboto', sans-serif;
+    color: #1F2937;
+    font-style: italic;
     font-weight: 300;
+    font-size: 36px;
+}
+
+.quotee {
+    font-family: 'Roboto', sans-serif;
+    font-style: bold;
+    font-size: 25px;
+    text-align: right;
+    padding-top: 20px;
+}
+
+.cta-section {
+    background-color: #fff;
+    width: 100%;
+    padding: 80px 0;
+}
+
+.cta {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882f6;
+    border-radius: 10px;
+    color: #fff;
+    padding: 40px;
+}
+
+.cta-text {
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+}
+
+.cta-title h3 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    color: #fff
+    font-weight: bold;
+    margin: 0;
+}
+
+.cta-subtext p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    color: #fff
+    font-weight: bold;
+    margin: 5px 0 0 0;
+}
+
+.cta-button button {
+    white-space: nowrap;
+    color: #fff;
+    border: 2px solid white;
+    border-radius: 4px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px 20px;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    padding: 20px 0;
+    text-align: center; 
+}
+
+.footer a {
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline; /* Underline links on hover */
 }
