--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,12 +53,12 @@ nav a {
     padding: 20px 0px 0px 0px; 
     background-color: #1F2937; 
     margin-top: 40px;
-    margin-bottom: 60px;
+    margin-bottom: 35px;
 }
 
 .content-column {
     flex: 1;
-    padding-right: 30px;
+    padding-right: 40px;
     margin-left: 10px;
 }
 
@@ -94,7 +94,9 @@ button {
 
 .image-column img {
     max-width: 100%; 
-    height: auto;
+    height: 80%;
+    border-radius: 10px;
+
 }
 
 .information-section {
