--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,10 +20,11 @@ ul, li {
 header {
     background-color: #1F2937;
     color: #fff;
+    border-bottom: 1px solid #3882f6;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 15px;
 }
 
 .logo {
@@ -52,13 +53,13 @@ nav a {
     display: flex; 
     padding: 20px 0px 0px 0px; 
     background-color: #1F2937; 
-    margin-top: 40px;
-    margin-bottom: 60px;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 
 .content-column {
     flex: 1;
-    padding-right: 30px;
+    padding-right: 40px;
     margin-left: 10px;
 }
 
@@ -94,7 +95,7 @@ button {
 
 .image-column img {
     max-width: 100%; 
-    height: auto;
+    height: 80%;
 }
 
 .information-section {
